--- a/AngularJS/End/app/views/allorders.html
+++ b/AngularJS/End/app/views/allorders.html
@@ -1,7 +1,7 @@
 <h2>Customer Orders</h2>
 <br />
 Filter: <input type="text" ng-model="orderFilter.products" /> <br /><br />
-<table>
+<table class="table">
   <tr>
     <th>Products</th>
     <th>Total</th>
