--- a/AngularJS/End/app/views/customers.html
+++ b/AngularJS/End/app/views/customers.html
@@ -1,7 +1,7 @@
 <h2>{{appSettings.title}}</h2>
 Filter: <input type="text" ng-model="customerFilter.name" /> <br /><br />
 
-<table>
+<table class="table table-striped">
   <tr>
     <th ng-click="doSort('name')">Name</th>
     <th ng-click="doSort('city')">City</th>
@@ -15,6 +15,7 @@ Filter: <input type="text" ng-model="customerFilter.name" /> <br /><br />
     <td>{{cust.orderTotal | currency}}</td>
     <td>{{cust.joined | date}}</td>
     <td><a href="#/orders/{{cust.id}}">View Orders</a></td>
+    <td class="center"><span class="glyphicon glyphicon-remove delete" ng-click="deleteCustomer(cust.id)"></span></td>
   </tr>
 </table>
 <br /><br />
