--- a/AngularJS/End/app/views/allorders.html
+++ b/AngularJS/End/app/views/allorders.html
@@ -6,7 +6,7 @@ Filter: <input type="text" ng-model="orderFilter.products" /> <br /><br />
     <th>Products</th>
     <th>Total</th>
   </tr>
-  <tr ng-repeat="order in orders | filter:orderFilter | orderBy:'name'">
+  <tr ng-repeat="order in orders | filter:orderFilter | orderBy:'name'" class="repeat-animation">
     <td>{{order.product}}</td>
     <td>{{order.total | currency}}</td>
   </tr>
