--- a/AngularJS/End/app/views/customers.html
+++ b/AngularJS/End/app/views/customers.html
@@ -9,7 +9,7 @@ Filter: <input type="text" ng-model="customerFilter.name" /> <br /><br />
     <th ng-click="doSort('joined')">Joined</th>
     <th>&nbsp;</th>
   </tr>
-  <tr ng-repeat="cust in customers |filter: customerFilter | limitTo:3| orderBy:sortBy:reverse">
+  <tr ng-repeat="cust in customers |filter: customerFilter | limitTo:3| orderBy:sortBy:reverse" class="repeat-animation">
     <td>{{cust.name | uppercase}}</td>
     <td>{{cust.city | lowercase}}</td>
     <td>{{cust.orderTotal | currency}}</td>
