--- a/AngularJS/AngularJS-mini-project/style.css
+++ b/AngularJS/AngularJS-mini-project/style.css
@@ -34,3 +34,26 @@ li {
   padding: 10px 0px;
   margin-bottom: 8px;
 }
+
+li span {
+  cursor: pointer;
+  position: relative;
+  float: right;
+  margin-right: 15px;
+}
+
+.addItem {
+  position: relative;
+  padding-bottom: 0;
+  height: 30px;
+}
+
+.addText {
+  width: 50%;
+  height: 30px;
+}
+
+.addItem button {
+  height: 30px;
+  width: 100px;
+}
