Adding listFactroy and injectsion into the controller

--- a/AngularJS/AngularJS-mini-project/views/myList.html
+++ b/AngularJS/AngularJS-mini-project/views/myList.html
@@ -7,5 +7,5 @@
   <ul>
     <li ng-repeat="i in items">{{i}}<span ng-click="deleteItem($index)">x</span></li>
   </ul>
-  <button ng-click="">Save list</button>
+  <button><a href="#/saved">Save list</a></button>
 </div>
